--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:theme="@style/Theme.PlayMusic"
         tools:targetApi="31">
         <activity
-            android:name=".activities.MusicPlayerActivity"
+            android:name=".views.activities.MusicPlayerActivity"
             android:exported="false"
             android:parentActivityName=".MainActivity"/>
         <activity
@@ -30,7 +30,7 @@
 
         </activity>
         <activity
-            android:name=".activities.SplashActivity"
+            android:name=".views.activities.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
